force-app/main/default/objects/Opportunity/fields/Beast__c.field-meta.xml
<CustomField>
    <fullName>Beast__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Beast</label>
    <referenceTo>Beast__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>