force-app/main/default/objects/Opportunity/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Profit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>