force-app/main/default/objects/Opportunity/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>