force-app/main/default/objects/Opportunity/fields/Sickness__c.field-meta.xml
<CustomField>
    <fullName>Sickness__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sickness</label>
    <referenceTo>Sickness__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>