force-app/main/default/objects/Opportunity/recordTypes/Medical_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Medical_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Medical</businessProcess>
    <label>Medical Opportunity</label>
</RecordType>