force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Beast__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Result__c</columns>
    <columns>Profit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Medical_Opportunity</value>
    </filters>
    <label>All Opportunities</label>
</ListView>